--- a/advanced-raid-calculator.service
+++ b/advanced-raid-calculator.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=www-data
 WorkingDirectory=/var/www/advanced-raid-calculator
-ExecStart=/usr/bin/node server.js
+ExecStart=/usr/local/bin/node server.js
 Restart=always
 Environment=NODE_ENV=production
 Environment=PORT=4001
